<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Marks Analyzer</string>
    <string name="action_search">Buscar</string>
    <string name="action_settings">Ajustes</string>

    <!-- Activity Opening -->
    <string name="title_activity_opening">OpeningActivity</string>

    <!-- Activity Main -->
    <string name="title_activity_main">MainActivity</string>
    <string name="edittext_dni_hint">DNI</string>
    <string name="edittext_pass_hint">PIN</string>
    <string name="edittext_url_hint">Pega la url aquí</string>
    <string name="button_start_text">Empezar</string>
    <!-- Progress Dialog -->
    <string name="progressText">Cargando. Espera, por favor.</string>

    <!-- Activity Report -->
    <string name="title_activity_report">ReportActivity</string>
    <!-- Action Bar-->
    <string name="search_bar_name_hint">Introduce nombre</string>
    <string name="tab1_title">HISTOGRAMA</string>
    <string name="tab2_title">GENERAL</string>
    <string name="tab3_title">LISTADO</string>
    <!-- Fragment General -->
    <string name="tag_subject">Asignatura: </string>
    <string name="tag_context">Contexto: </string>
    <string name="tag_date">Fecha: </string>
    <string name="tag_mean">Media: </string>
    <string name="tag_median">Mediana: </string>
    <string name="tag_low_percentile">Percentil 25: </string>
    <string name="tag_high_percentile">Percentil 75: </string>
    <string name="tag_blanks">Notas en blanco: </string>
    <string name="tag_total">Total: </string>
    <string name="tag_passed">Aprobados: </string>
    <string name="tag_failed">Suspendidos: </string>
    <string name="tag_best_mark">Mejor nota: </string>
    <string name="tag_worst_mark">Peor nota: </string>

    <!-- Preferences menu -->
    <string name="prefmenu_about">¿Qué es ésto?</string>
    <string name="prefmenu_preferences">Ajustes</string>

    <!-- About dialog -->
    <string name="dialog_about_title">¿Qué es ésto?</string>
    <string name="dialog_about_message">
        Marks-Analyzer es una aplicación creada por alumnos de la Universidad Politècnica de València
        de forma desinteresada y con el único objetivo de compartirla con el resto de compañeros.
        La UPV no ha intervenido en ningún momento de la creación ni publicación de esta aplicación,
        por lo que <b>carece de carácter oficial</b>.\n\n
        Las credenciales de acceso serán siempre olvidadas, salvo que se indique lo contrario en el
        menú Ajustes -> Privacidad. En cualquier caso, son estrictamente necesarias para acceder a
        los documentos con las notas. Si no confías en nuestra aplicación, rogamos no la utilices.\n
        Si tienes cualquier sugerencia, opinión o idea que pueda ayudar a la comunidad, no dudes en
        ponerte en contacto con el equipo de desarrollo.\n\n
        Compártela con el resto de compañeros.\n\n
    </string>
    <string name="dialog_about_button_text">Entendido</string>

    <!-- Settings -->
    <string name="pref_action_bar_title">Ajustes</string>
    <string name="pref_category_credentials">PRIVACIDAD</string>
    <string name="pref_remember_credentials">Recordar credenciales</string>
    <string name="pref_summary_credentials">
        Si marca esta casilla la aplicación recordará su dni y clave de acceso a la intranet
    </string>
    <string name="pref_category_languaje">IDIOMA</string>
    <string name="pref_title_languaje">Idioma de la aplicación</string>
    <string name="pref_summary_languaje">Pulse para elegir idioma</string>
    <string name="dialog_restart_title">Reiniciar aplicación</string>
    <string name="dialog_restart_message">
        Para cambiar el idioma es necesario reiniciar la aplicación.
    </string>
    <string name="dialog_restart_button_yes">Reiniciar</string>
    <string name="dialog_restart_button_no">Cancelar</string>

</resources>
