<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gonz.upv.marksanalyzer.ui.activity.ReportActivity">

    <!-- Search, should appear as action button -->
    <item
        android:id="@+id/action_search"
        android:icon="@mipmap/ic_action_search"
        android:title="@string/action_search"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_about"
        android:title="@string/prefmenu_about"
        android:icon="@android:drawable/ic_menu_info_details" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/prefmenu_preferences"
        android:icon="@android:drawable/ic_menu_preferences" />





</menu>
