<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/act_report_padding"
        tools:context=".GeneralFragment" >

        <TextView
            android:id="@+id/tagSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:textSize="@dimen/title_text_size"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tagContext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tagSubject"
            android:gravity="center"
            android:textSize="@dimen/subtitle_text_size"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/tagDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tagContext"
            android:gravity="center"
            android:paddingBottom="@dimen/tags_padding_bottom"
            android:textSize="@dimen/subtitle_text_size"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/tagTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tagDate"
            android:paddingTop="@dimen/tags_padding_top"
            android:text="@string/tag_total"
            android:textColor="@android:color/black"
            android:textSize="@dimen/tags_text_size"/>

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tagTotal"
            android:layout_toEndOf="@id/tagTotal"
            android:layout_alignBaseline="@id/tagTotal"
            android:paddingLeft="@dimen/tags_padding_left"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/tags_text_size"/>

        <TextView
            android:id="@+id/tagBlanks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tagTotal"
            android:paddingTop="@dimen/tags_padding_top"
            android:paddingBottom="@dimen/tags_padding_bottom"
            android:text="@string/tag_blanks"
            android:textColor="@android:color/black"
            android:textSize="@dimen/tags_text_size"/>

        <TextView
            android:id="@+id/blanks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tagBlanks"
            android:layout_toEndOf="@id/tagBlanks"
            android:layout_alignBaseline="@id/tagBlanks"
            android:paddingLeft="@dimen/tags_padding_left"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/tags_text_size"/>

        <View
            android:id="@+id/separator1"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tagBlanks"
            android:background="@color/color_primary"/>

        <TextView
            android:id="@+id/tagPassed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/separator1"
            android:paddingTop="@dimen/tags_padding_top"
            android:text="@string/tag_passed"
            android:textColor="@android:color/black"
            android:textSize="@dimen/tags_text_size"/>

        <TextView
            android:id="@+id/passed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tagPassed"
            android:layout_toEndOf="@id/tagPassed"
            android:layout_alignBaseline="@id/tagPassed"
            android:paddingLeft="@dimen/tags_padding_left"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/tags_text_size"/>

        <TextView
            android:id="@+id/tagFailed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tagPassed"
            android:paddingTop="@dimen/tags_padding_top"
            android:text="@string/tag_failed"
            android:textColor="@android:color/black"
            android:textSize="@dimen/tags_text_size"/>

        <TextView
            android:id="@+id/failed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tagFailed"
            android:layout_toEndOf="@id/tagFailed"
            android:layout_alignBaseline="@id/tagFailed"
            android:paddingLeft="@dimen/tags_padding_left"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/tags_text_size"/>

        <TextView
            android:id="@+id/tagMean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tagFailed"
            android:paddingTop="@dimen/tags_padding_top"
            android:paddingBottom="@dimen/tags_padding_bottom"
            android:text="@string/tag_mean"
            android:textColor="@android:color/black"
            android:textSize="@dimen/tags_text_size"/>

        <TextView
            android:id="@+id/mean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tagMean"
            android:layout_toEndOf="@id/tagMean"
            android:layout_alignBaseline="@id/tagMean"
            android:paddingLeft="@dimen/tags_padding_left"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/tags_text_size"/>

        <View
            android:id="@+id/separator2"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tagMean"
            android:background="@color/color_primary"/>

        <TextView
            android:id="@+id/tagBestMark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/separator2"
            android:paddingTop="@dimen/tags_padding_top"
            android:text="@string/tag_best_mark"
            android:textColor="@android:color/black"
            android:textSize="@dimen/tags_text_size"/>

        <TextView
            android:id="@+id/bestMark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tagBestMark"
            android:layout_toEndOf="@id/tagBestMark"
            android:layout_alignBaseline="@id/tagBestMark"
            android:paddingLeft="@dimen/tags_padding_left"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/tags_text_size"/>

        <TextView
            android:id="@+id/tagWorstMark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tagBestMark"
            android:paddingTop="@dimen/tags_padding_top"
            android:text="@string/tag_worst_mark"
            android:textColor="@android:color/black"
            android:textSize="@dimen/tags_text_size"/>

        <TextView
            android:id="@+id/worstMark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tagWorstMark"
            android:layout_toEndOf="@id/tagWorstMark"
            android:layout_alignBaseline="@id/tagWorstMark"
            android:paddingLeft="@dimen/tags_padding_left"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/tags_text_size"/>

    </RelativeLayout>

</ScrollView>	